# vscode_python

./: .gitignore  pyproject.toml  ruff.toml  setup.sh
terminal/: .bashrc  .zshrc
